--- a/RoboToDo.roboFontExt/info.plist
+++ b/RoboToDo.roboFontExt/info.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>path</key>
-			<string>font_todos.py</string>
+			<string>font_to-dos.py</string>
 			<key>preferredName</key>
 			<string>Font To-Dos</string>
 			<key>shortKey</key>
@@ -14,7 +14,7 @@
 		</dict>
 		<dict>
 			<key>path</key>
-			<string>glyph_todos.py</string>
+			<string>glyph_to-dos.py</string>
 			<key>preferredName</key>
 			<string>Glyph To-Dos</string>
 			<key>shortKey</key>
@@ -25,6 +25,8 @@
 	<string>Jack Jennings</string>
 	<key>developerURL</key>
 	<string>http://ja.ckjennin.gs</string>
+	<key>developerurl</key>
+	<string>http://ja.ckjennin.gs</string>
 	<key>html</key>
 	<true/>
 	<key>launchAtStartUp</key>
@@ -33,13 +35,11 @@
 	<string>_startup.py</string>
 	<key>name</key>
 	<string>RoboToDo</string>
-	<key>requiresVersionMajor</key>
-	<string>1</string>
-	<key>requiresVersionMinor</key>
-	<string>2</string>
+	<key>repository</key>
+	<string>jackjennings/RoboToDo</string>
 	<key>timeStamp</key>
-	<real>1362938498.757504</real>
+	<real>1363710349.077573</real>
 	<key>version</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 </dict>
 </plist>
