--- a/RoboToDo.roboFontExt/info.plist
+++ b/RoboToDo.roboFontExt/info.plist
@@ -40,6 +40,10 @@
 	<key>timeStamp</key>
 	<real>1364306316.999585</real>
 	<key>version</key>
-	<string>1.0.5</string>
+	<string>1.1</string>
+	<key>requiresVersionMajor</key>
+	<string>1</string>
+	<key>requiresVersionMinor</key>
+	<string>6</string>
 </dict>
 </plist>
